# CMakePOC

./: .gitignore  run.bat
common_cmake_includes/: dependency-graph.cmake  setup_configurations.cmake
src/: CMakeLists.txt
src/mylib_shared/: CMakeLists.txt
src/theapp/: main.cpp
src/utillib/: CMakeLists.txt
